# ngscmd

./: Makefile  Makefile.in  README.md  bypos.c  clean.c  config.h  config.h.in  config.status  configure  configure.ac  convert.c  count.c  fa2fq.c  fq2fa.c  getopt.c  getopt.h  index.c  kmer.c  makedb.c  ngscmd.c  ngscmd.h  ngslib.h  ngsutils.c  ngsutils.h  pair.c  revcom.c  score.c  sort.c
src/: Makefile  Makefile.am  Makefile.in  clean.c  filter.c  format.c  getopt.h  join.c  kmer.c  ngscmd.c  ngscmd.h  pair.c  rev_comp_table.txt  rmdup.c  score.c  sort.c  trim.c  uthash.h
src/.deps/: ngscmd-filter.Po  ngscmd-join.Po  ngscmd-kmer.Po  ngscmd-ngscmd.Po  ngscmd-pair.Po  ngscmd-rmdup.Po  ngscmd-score.Po  ngscmd-trim.Po
